<package format="3">
  <name>draco_point_cloud_transport</name>
  <version>1.0.0</version>
  <description>
    draco_point_cloud_transport provides a plugin to point_cloud_transport for sending point clouds
    encoded with KD tree compression.
  </description>
  <author>Jakub Paplham</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ctu-vras/draco_point_cloud_transport</url>
  <url type="website">https://wiki.ros.org/draco_point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ctu-vras/draco_point_cloud_transport/issues</url>

  <author>Jakub Paplham</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>draco</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>point_cloud_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>draco</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>point_cloud_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <point_cloud_transport plugin="${prefix}/draco_plugins.xml" />
  </export>
</package>
