<package format="3">
  <name>organized_point_cloud_transport</name>
  <version>1.0.5</version>
  <description>
    organized_point_cloud_transport provides a plugin to point_cloud_transport for sending point clouds
    compressed by projecting the cloud onto an image and compressing the image like its a png image.
    Adapted from: https://arxiv.org/pdf/2202.00719.pdf
  </description>
  <author>John D'Angelo</author>
  <maintainer email="john.dangelo@tailos.com">John D'Angelo</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ctu-vras/draco_point_cloud_transport</url>
  <url type="website">https://wiki.ros.org/draco_point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ctu-vras/draco_point_cloud_transport/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pluginlib</build_depend>

  <exec_depend>pluginlib</exec_depend>

  <depend>libpcl-common</depend>
  <depend>libpcl-io</depend>
  <depend>pcl_conversions</depend>
  <depend>point_cloud_interfaces</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
