<package format="3">
  <name>pcl_point_cloud_transport</name>
  <version>1.0.5</version>
  <description>
    Add descrioptuio
  </description>
  <author>Jakub Paplham</author>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>BSD</license>

  <url type="repository"></url>
  <url type="website"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcl-common</depend>
  <depend>libpcl-io</depend>
  <depend>pcl_conversions</depend>
  <depend>pluginlib</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
